Fix note input spacing. Moved status bar into note

--- a/src/components/Button/ButtonRow.scss
+++ b/src/components/Button/ButtonRow.scss
@@ -3,6 +3,5 @@
 .buttonrow {
   display: flex;
   justify-content: flex-end;
-  padding-top: $padding-x2;
   width: 100%;
 }
