--- a/src/components/Note/NoteInput.scss
+++ b/src/components/Note/NoteInput.scss
@@ -2,8 +2,6 @@
 
 .noteinput {
   border: none;
-  border-radius: $border-radius;
-  box-shadow: $box-shadow;
   color: $color-gray-dark;
   display: block;
   font-family: Arial, sans-serif;
